--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,8 @@
 version: '3.3'
+volumes:
+  static_all:
+  media_volume:
+
 services:
 
   frontend:
@@ -6,12 +10,22 @@ services:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - static_all:/app/result_build/
+  backend:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    ports:
+      - "9000:9000"
+    volumes:
+      - static_all:/backend_static/
+      - media_volume:/app/media/
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
+      - static_all:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - media_volume:/usr/share/nginx/html/media/
