--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,4 +10,5 @@ RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-CMD ["gunicorn", "--bind", "0.0.0.0:9000", "foodgram_backend.wsgi"]
+#CMD ["gunicorn", "--access-logfile", "'-'", "--error-logfile", "'-'", "--log-level", "debug", "--bind", "0.0.0.0:9000", "foodgram_backend.wsgi"]
+CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "--log-level", "debug", "--bind", "0.0.0.0:9000", "foodgram_backend.wsgi:application"]
