--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,20 +1,28 @@
 version: '3.3'
 volumes:
+  pg_data:
   static_all:
   media_volume:
 
 services:
-
+  db:
+    image: postgres:13.10
+    env_file: ../.env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+    depends_on:
+      - db
     volumes:
       - static_all:/app/result_build/
   backend:
     build:
       context: ../backend
       dockerfile: Dockerfile
+    env_file: ../.env
     volumes:
       - static_all:/backend_static/
       - media_volume:/app/media/
