--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,9 +101,9 @@ jobs:
       - name: Copy docker-compose.yaml via ssh
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secret.HOST }}
-          username: ${{ secret.USER }}
-          key: ${{ secret.SSH_KEY }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             cd foodgram
             sudo docker compose -f docker-compose.production.yml pull
