--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,16 @@ jobs:
         run: |
           python -m flake8 backend/
 
-  build_backend_and_push_to_docker_hub:
+  run_deploy:
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/master'
+    steps:
+      - run: echo "Running build and deploy"
+
+  build_backend_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    needs: run_deploy
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -47,8 +53,7 @@ jobs:
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/master'
+    needs: run_deploy
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -69,8 +74,7 @@ jobs:
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/master'
+    needs: run_deploy
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -94,7 +98,6 @@ jobs:
       - build_backend_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_gateway_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
