--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,21 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name foodgram.belintsev.ru;
-
+    server_tokens off;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+    server_name foodgram.belintsev.ru;
+    ssl_certificate /etc/nginx/ssl/live/foodgram.belintsev.ru/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/foodgram.belintsev.ru/privkey.pem;
     server_tokens off;
   
     location /api/ {
@@ -34,3 +48,4 @@ server {
       }
 
 }
+
