--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -42,7 +42,7 @@ services:
       - backend
       - frontend
   certbot:
-    image: certbot/cerbot:latest
+    image: alenkas/cerbot:latest
     volumes:
       - certbot_root:/var/www/certbot/
       - ssl_volume:/etc/letsencrypt/
